--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
             <h1 id="site-title">Malu Girelli</h1>
             <p class="subtitle" id="site-subtitle">Corajosa e Chorona</p>
             
+            ...
             <div class="social-links">
-                <a href="#" target="_blank" class="social-icon" aria-label="Instagram">
+                <a href="https://www.instagram.com/malu.girelli?igsh=MjJreWtnc3JtaHpz" target="_blank" class="social-icon" aria-label="Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="#" target="_blank" class="social-icon" aria-label="WhatsApp">
+                <a href="https://wa.me/qr/3U5O6Q4ARMHDJ1" target="_blank" class="social-icon" aria-label="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="#" target="_blank" class="social-icon" aria-label="LinkedIn">
+                <a href="AQUI_VAI_O_LINK_DO_SEU_LINKEDIN" target="_blank" class="social-icon" aria-label="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="#" target="_blank" class="social-icon" aria-label="GitHub">
+                <a href="https://github.com/Maluzet3" target="_blank" class="social-icon" aria-label="GitHub">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
+            ...
             <nav class="nav-menu">
                 <button class="nav-btn active" data-page="about">Sobre Mim</button> 
                 <button class="nav-btn" data-page="course">Meu Curso</button> 
