--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                         <div class="photo-caption">Estudos</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/universidade-foto.jpg" alt="Foto da universidade" class="photo-img">
+                        <img src="turmacds.jpg" alt="Foto da universidade" class="photo-img">
                         <div class="photo-caption">Minha turma</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/estudos-foto.jpg" alt="Foto dos estudos" class="photo-img">
+                        <img src="passeioCDS.jpg" alt="Foto dos estudos" class="photo-img">
                         <div class="photo-caption">Passeios</div>
                     </div>
                     <div class="photo-card">
@@ -111,7 +111,7 @@
                         <div class="photo-caption">Melhores Amizades</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/bons-momentos-foto.jpg" alt="Bons momentos com amigos" class="photo-img">
+                        <img src="tlc.jpg" alt="Bons momentos com amigos" class="photo-img">
                         <div class="photo-caption">Boas Lembranças</div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                         <div class="photo-caption">União</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/reunioes-familiares.jpg" alt="Reuniões familiares" class="photo-img">
+                        <img src="nivervo.jpg" alt="Reuniões familiares" class="photo-img">
                         <div class="photo-caption">Celebrações</div>
                     </div>
                     <div class="photo-card">
