--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
             </div>
             
             <div id="course" class="page grid-layout">
-                <h2 class="section-title" id="course-title">Meu Curso</h2>
-                <div class="text-content">
-                    <p class="content-text" id="course-text">Na escola, sou da turma 2CDS e me dedico ao Desenvolvimento de Sistemas. Este é o processo completo de dar vida a softwares, aplicativos e sites, começando pelo planejamento das necessidades, passando pela codificação (usando linguagens de programação e frameworks), até a fase final de testes e implementação. Meu objetivo é aprender a criar soluções eficientes para plataformas Web, Desktop e Mobile que ajudem a otimizar processos e atender às demandas de empresas e usuários. Aqui compartilho momentos e experiências da minha vida acadêmica.</p>
-                </div>
+    <h2 class="section-title" id="course-title">Meu Curso</h2>
+    <div class="text-content">
+        <p class="content-text" id="course-text">
+            Na escola, sou da turma **2CDS** e me dedico ao **Desenvolvimento de Sistemas**. Este é o processo completo de dar vida a softwares, aplicativos e sites, começando pelo planejamento das necessidades, passando pela codificação (usando linguagens de programação e frameworks), até a fase final de testes e implementação. <br><br>Meu objetivo é aprender a criar soluções eficientes para plataformas Web, Desktop e Mobile que ajudem a otimizar processos e atender às demandas de empresas e usuários. Aqui compartilho momentos e experiências da minha vida acadêmica.
+        </p>
+    </div>
+</div>
                 <div class="photo-grid-new">
                     <div class="photo-card">
                         <img src="caminho/para/curso-foto.jpg" alt="Foto do curso" class="photo-img">
