--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                         <div class="photo-caption">Com os Amigos</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/amigos-momentos.jpg" alt="Momentos especiais com amigos" class="photo-img">
+                        <img src="niverpt2.jpg" alt="Momentos especiais com amigos" class="photo-img">
                         <div class="photo-caption">Risadas</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/amizades-foto.jpg" alt="Amizades" class="photo-img">
+                        <img src="gabi.jpg" alt="Amizades" class="photo-img">
                         <div class="photo-caption">Melhores Amizades</div>
                     </div>
                     <div class="photo-card">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="photo-grid-new">
                     <div class="photo-card">
-                        <img src="caminho/para/familia-foto.jpg" alt="Foto da família" class="photo-img">
+                        <img src="familia.jpg" alt="Foto da família" class="photo-img">
                         <div class="photo-caption">Minha Base</div>
                     </div>
                     <div class="photo-card">
@@ -152,11 +152,11 @@
                 </div>
                 <div class="photo-grid-new">
                     <div class="photo-card">
-                        <img src="caminho/para/objetivos-foto.jpg" alt="Objetivos" class="photo-img">
-                        <div class="photo-caption">Foco</div>
+                        <img src="engmac.jpg" alt="Objetivos" class="photo-img">
+                        <div class="photo-caption">Objetivo</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/metas-foto.jpg" alt="Metas" class="photo-img">
+                        <img src="casamnto.jpg" alt="Metas" class="photo-img">
                         <div class="photo-caption">Plano</div>
                     </div>
                     <div class="photo-card">
@@ -164,7 +164,7 @@
                         <div class="photo-caption">Inspiração</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/futuro-foto.jpg" alt="Futuro" class="photo-img">
+                        <img src="casa.jpg" alt="Futuro" class="photo-img">
                         <div class="photo-caption">Futuro</div>
                     </div>
                 </div>
