--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
     <h2 class="section-title" id="course-title">Meu Curso</h2>
     <div class="text-content">
         <p class="content-text" id="course-text">
-            Na escola, sou da turma 2°CDS e me dedico ao Desenvolvimento de Sistemas. Este é o processo completo de dar vida a softwares, aplicativos e sites, começando pelo planejamento das necessidades,
-             passando pela codificação (usando linguagens de programação e frameworks), até a fase final de testes e implementação. <br><br>Meu objetivo é aprender a criar soluções eficientes para plataformas Web,
-              Desktop e Mobile que ajudem a otimizar processos e atender às demandas de empresas e usuários. 
-              Aqui compartilho momentos e experiências da minha vida acadêmica.
+            Sou da turma 2°CDS e curso Desenvolvimento de Sistemas. Dedico-me a criar softwares e aplicativos, desde o planejamento até a implementação, utilizando linguagens e frameworks de programação. Meu principal objetivo é desenvolver soluções eficientes para plataformas Web, Desktop e Mobile, otimizando processos para empresas e usuários. Nesta seção, compartilho um pouco da minha jornada acadêmica.
         </p>
     </div>
 </div>
