--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h2 class="section-title" id="course-title">Meu Curso</h2>
     <div class="text-content">
         <p class="content-text" id="course-text">
-            Sou da turma 2°CDS e curso Desenvolvimento de Sistemas. Dedico-me a criar softwares e aplicativos, desde o planejamento até a implementação, utilizando linguagens e frameworks de programação. Meu principal objetivo é desenvolver soluções eficientes para plataformas Web, Desktop e Mobile, otimizando processos para empresas e usuários. Nesta seção, compartilho um pouco da minha jornada acadêmica.
+            Como aluna do 2°CDS de Desenvolvimento de Sistemas, foco na criação de soluções eficientes para plataformas Web, Mobile e Desktop. Meu aprendizado abrange da análise de necessidades à codificação e implementação de softwares
         </p>
     </div>
 </div>
