--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="photo-grid-new">
                     <div class="photo-card wide-card">
-                        <img src="foto perfil.enc" alt="Sua foto principal" class="photo-img">
+                        <img src="eu.jpg" alt="Sua foto principal" class="photo-img">
                         <div class="photo-caption">Foto Principal</div>
                     </div>
                     <div class="photo-card">
@@ -57,11 +57,11 @@
                         <div class="photo-caption">Momentos Especiais</div>
                     </div>
                     <div class="photo-card">
-                        <img src="kumon.jpg" alt="Suas conquistas" class="photo-img">
+                        <img src="medalha.jpg" alt="Suas conquistas" class="photo-img">
                         <div class="photo-caption">Conquistas</div>
                     </div>
                     <div class="photo-card">
-                        <img src="paixao.jpg" alt="Suas paixões" class="photo-img">
+                        <img src="cafe.jpg" alt="Suas paixões" class="photo-img">
                         <div class="photo-caption">Paixões</div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         <div class="photo-caption">Passeios</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/projetos-foto.jpg" alt="Projetos acadêmicos" class="photo-img">
+                        <img src="feira.jpg" alt="Projetos acadêmicos" class="photo-img">
                         <div class="photo-caption">Feira de Profissões</div>
                     </div>
                 </div>
