--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                 </div>
                 <div class="photo-grid-new">
                     <div class="photo-card">
-                        <img src="familia.jpg" alt="Foto da família" class="photo-img">
+                        <img src="family.jpg" alt="Foto da família" class="photo-img">
                         <div class="photo-caption">Minha Base</div>
                     </div>
                     <div class="photo-card">
-                        <img src="caminho/para/familia-momentos.jpg" alt="Momentos em família" class="photo-img">
+                        <img src="pedro.jpg" alt="Momentos em família" class="photo-img">
                         <div class="photo-caption">União</div>
                     </div>
                     <div class="photo-card">
