--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     <p class="content-text" id="about-text">Olá! Bem-vindo à minha página pessoal. Aqui você pode conhecer um pouco mais sobre mim, minha jornada, minhas paixões e o que me inspira todos os dias.</p>
                 </div>
                 <div class="photo-grid-new">
-                    <div class="photo-card wide-card">
-                        <img src="eu.jpg" alt="Sua foto principal" class="photo-img">
+                    <div class="photo-card"> <img src="eu.jpg" alt="Sua foto principal" class="photo-img">
                         <div class="photo-caption">Foto Principal</div>
                     </div>
                     <div class="photo-card">
@@ -66,7 +65,6 @@
                     </div>
                 </div>
             </div>
-            
             <div id="course" class="page grid-layout">
     <h2 class="section-title" id="course-title">Meu Curso</h2>
     <div class="text-content">
