--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             </div>
             
             <div id="childhood-album" class="page grid-layout">
-                <h2 class="section-title">👶 Álbum de Infância</h2>
+                </div>
+                <h2 class="section-title">Álbum de Infância</h2>
                 <div class="text-content">
                     <p class="content-text">Uma viagem no tempo! Arraste para a direita ou clique no botão "Sobre Mim" para voltar à página principal.</p>
                     <button class="nav-btn" onclick="closeChildhoodAlbum()" style="margin-bottom: 20px;">Voltar para Sobre Mim</button>
@@ -87,10 +88,7 @@
                 </div>
             </div>
 
-            <div id="course" class="page grid-layout"> 
-                </div>
-            </main>
-            <div id="course" class="page grid-layout">
+    
     <h2 class="section-title" id="course-title">Meu Curso</h2>
     <div class="text-content">
         <p class="content-text" id="course-text">
