--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
         
-        <main class="content-wrapper">
+      <main class="content-wrapper">
             <div id="about" class="page active grid-layout">
                 <h2 class="section-title" id="about-title">Sobre Mim</h2>
                 <div class="text-content">
@@ -87,7 +87,9 @@
                     <div class="photo-card"><img src="caminho/infancia_10.jpg" alt="Infância 10" class="photo-img"><div class="photo-caption">Lembrança 10</div></div>
                 </div>
             </div>
-
+<div id="course" class="page grid-layout"> 
+                </div>
+            </main>
     
     <h2 class="section-title" id="course-title">Meu Curso</h2>
     <div class="text-content">
