--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
                     <div class="photo-card">
 
-                        <img src="caminho/para/celebracoes-familia.jpg" alt="Celebrações em família" class="photo-img">
+                        <img src="family2.jpg" alt="Celebrações em família" class="photo-img">
 
                         <div class="photo-caption">Momentos</div>
 
