--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                         <img src="caminho/para/curso-foto.jpg" alt="Foto do curso" class="photo-img">
 
-                        <div class="photo-caption">Estudos</div>
+                        <div class="photo-caption">Os mais mais do szy</div>
 
                     </div>
 
