--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                     <div class="photo-card">
 
-                        <img src="caminho/para/curso-foto.jpg" alt="Foto do curso" class="photo-img">
+                        <img src="cds1.jpg" alt="Foto do curso" class="photo-img">
 
                         <div class="photo-caption">Os mais mais do szy</div>
 
@@ -318,7 +318,7 @@
 
                     <div class="photo-card">
 
-                        <img src="caminho/para/inspiracoes-foto.jpg" alt="Inspirações" class="photo-img">
+                        <img src="viagem.jpg" alt="Inspirações" class="photo-img">
 
                         <div class="photo-caption">Inspiração</div>
 
