--- a/index.html
+++ b/index.html
@@ -16,19 +16,32 @@
         <p class="subtitle" id="site-subtitle">Corajosa e Chorona</p>
 
         <div class="social-links">
-            <a href="https://www.instagram.com/" target="_blank" class="social-icon" id="instagram-link">
-                <span class="icon">📱</span> Instagram
-            </a>
-            <a href="https://wa.me/" target="_blank" class="social-icon" id="whatsapp-link">
-                <span class="icon">🟢</span> WhatsApp
-            </a>
-            <a href="https://github.com/" target="_blank" class="social-icon" id="github-link">
-                <span class="icon">🐙</span> GitHub
-            </a>
-            <a href="https://www.tiktok.com/" target="_blank" class="social-icon" id="tiktok-link">
-                <span class="icon">🎵</span> TikTok
-            </a>
-        </div>
+
+                <a href="https://www.instagram.com/malu.girelli?igsh=MjJreWtnc3JtaHpz" target="_blank" class="social-icon" aria-label="Instagram">
+
+                    <i class="fab fa-instagram"></i>
+
+                </a>
+
+                <a href="https://wa.me/qr/3U5O6Q4ARMHDJ1" target="_blank" class="social-icon" aria-label="WhatsApp">
+
+                    <i class="fab fa-whatsapp"></i>
+
+                </a>
+
+                <a href="AQUI_VAI_O_LINK_DO_SEU_LINKEDIN" target="_blank" class="social-icon" aria-label="LinkedIn">
+
+                    <i class="fab fa-linkedin-in"></i>
+
+                </a>
+
+                <a href="https://github.com/Maluzet3" target="_blank" class="social-icon" aria-label="GitHub">
+
+                    <i class="fab fa-github"></i>
+
+                </a>
+
+            </div>
         
         <nav>
           <button class="nav-btn active" data-page="about">Sobre Mim</button>
