--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <header>
-        <h1 id="site-title">Meu Nome</h1>
+        <h1 id="site-title">Malu Girelli</h1>
         <p class="subtitle" id="site-subtitle">Corajosa e Chorona</p>
 
         <div class="social-links">
@@ -48,16 +48,16 @@
           <p class="content-text" id="about-text">Olá! Bem-vindo à minha página pessoal. Aqui você pode conhecer um pouco mais sobre mim, minha jornada, minhas paixões e o que me inspira todos os dias.</p>
           <div class="photo-grid">
             <div class="photo-placeholder large">
-              <img src="images/eu.jpg" alt="Minha foto" class="page-image">
+              <img src="eu.jpg" alt="Minha foto" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/momentos.jpg" alt="Momentos especiais" class="page-image">
+              <img src="niver.jpg" alt="Momentos especiais" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/conquistas.jpg" alt="Minhas conquistas" class="page-image">
+              <img src="medalha.jpg" alt="Minhas conquistas" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/paixoes.jpg" alt="Minhas paixões" class="page-image">
+              <img src="cafe.jpg" alt="Minhas paixões" class="page-image">
             </div>
           </div>
         </div>
@@ -67,16 +67,16 @@
           <p class="content-text" id="course-text">Estou cursando uma área que me apaixona e que me permite crescer profissionalmente. Aqui compartilho momentos e experiências da minha vida acadêmica.</p>
           <div class="photo-grid">
             <div class="photo-placeholder">
-              <img src="images/curso.jpg" alt="Foto do meu curso" class="page-image">
+              <img src="cds1.jpg" alt="Foto do meu curso" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/universidade.jpg" alt="Foto da universidade" class="page-image">
+              <img src="turmacds.jpg" alt="Foto da universidade" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/estudos.jpg" alt="Minha área de estudo" class="page-image">
+              <img src="passeioCDS.jpg" alt="Minha área de estudo" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/projeto.jpg" alt="Projeto acadêmico" class="page-image">
+              <img src="feira.jpg" alt="Projeto acadêmico" class="page-image">
             </div>
           </div>
         </div>
@@ -86,16 +86,16 @@
           <p class="content-text" id="friends-text">Amigos são a família que escolhemos. Aqui estão as pessoas especiais que fazem parte da minha vida e tornam cada momento mais especial.</p>
           <div class="photo-grid">
             <div class="photo-placeholder">
-              <img src="images/amigos1.jpg" alt="Foto com meus amigos" class="page-image">
+              <img src="amigos.jpeg" alt="Foto com meus amigos" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/amigos2.jpg" alt="Festa com amigos" class="page-image">
+              <img src="niverpt2.jpg" alt="Festa com amigos" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/amigos3.jpg" alt="Amigos em um encontro" class="page-image">
+              <img src="gabi.jpg" alt="Amigos em um encontro" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/amigos4.jpg" alt="Bons momentos com amigos" class="page-image">
+              <img src="tlc.jpg" alt="Bons momentos com amigos" class="page-image">
             </div>
           </div>
         </div>
@@ -105,16 +105,16 @@
           <p class="content-text" id="family-text">A família é a base de tudo. Aqui compartilho um pouco sobre as pessoas que me apoiam, me inspiram e estão sempre ao meu lado.</p>
           <div class="photo-grid">
             <div class="photo-placeholder">
-              <img src="images/familia1.jpg" alt="Foto da minha família" class="page-image">
+              <img src="familia.jpg" alt="Foto da minha família" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/familia2.jpg" alt="Momentos felizes em família" class="page-image">
+              <img src="family.jpg" alt="Momentos felizes em família" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/familia3.jpg" alt="Reunião de família" class="page-image">
+              <img src="family22.jpg" alt="Reunião de família" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/familia4.jpg" alt="Celebração familiar" class="page-image">
+              <img src="nivervo.jpg" alt="Celebração familiar" class="page-image">
             </div>
           </div>
         </div>
@@ -124,16 +124,16 @@
           <p class="content-text" id="dreams-text">Sonhar é essencial para crescer. Aqui compartilho minhas aspirações, objetivos e tudo aquilo que me motiva a seguir em frente todos os dias.</p>
           <div class="photo-grid">
             <div class="photo-placeholder">
-              <img src="images/sonho1.jpg" alt="Meus objetivos" class="page-image">
+              <img src="engmac.jpg" alt="Meus objetivos" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/sonho2.jpg" alt="Minhas metas de vida" class="page-image">
+              <img src="casamnto.jpg" alt="Minhas metas de vida" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/sonho3.jpg" alt="Minhas inspirações" class="page-image">
+              <img src="viagem.jpg" alt="Minhas inspirações" class="page-image">
             </div>
             <div class="photo-placeholder">
-              <img src="images/sonho4.jpg" alt="Meu futuro" class="page-image">
+              <img src="casa.jpg" alt="Meu futuro" class="page-image">
             </div>
           </div>
         </div>
